Fixed left padding for Contact on smaller screens

--- a/css/contact.css
+++ b/css/contact.css
@@ -60,7 +60,7 @@ body {
 
 .form form {
   text-align: left;
-  padding-left: 495px;
+  padding-left: 26%;
   font-size: 20px;
 }
 
